# openego

./: .gitignore  README.md  RELEASE.md  RELEASE_NOTES_v0.1.0.md  V2_PLAN.md  admin.html  ai-response-generator.js  apple-mail-sender.js  auto-publish.sh  clean-rebuild.sh  clear-cache.sh  communication-scanner.js  dashboard-new.html  dashboard-styles.css  deploy.sh  electron-modules.js  email-scanner.js  error-recovery.js  install.sh  launch.sh  main.js  message-classifier.js  message-monitor-safe.js  message-monitor.js  message-tracker.js  multi-channel-sender.js  openego-core.js  openego.py  package-lock.json  package.json  persona-engine.js  rebuild.sh  release.sh  requirements.txt  setup.py  smart-features.js  telegram-sender.js  training-engine.js  update-openego.sh  update.sh  (+1 more)
.github/workflows/: auto-release.yml  build-release.yml  release.yml
backend/: .env.example  README.md  package.json  server.js
docs/: audit-trail-design.md
src/: analyzer.js  app.js  index.html  main.js  styles.css  updater.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: bot_tracking.rs  lib.rs  main.rs  updater.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/database/: mod.rs
src-tauri/src/gmail/: mod.rs
src-tauri/src/patterns/: mod.rs
website/: index.html
