[package]
name = "openego"
version = "0.1.0"
description = "Your Personal Digital Twin - Local-first AI that learns how you communicate"
authors = ["OpenEgo Team"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "openego_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core Tauri
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP Client for API calls
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# UUID generation
uuid = { version = "1.10", features = ["v4"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Base64 encoding/decoding
base64 = "0.22"

# URL encoding
urlencoding = "2.1"

# Pattern matching
regex = "1.10"

# Error handling
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
